# campello_input

./: .clang-format  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  TODO.md  android.cmake  ios.cmake  linux.cmake  macos.cmake  run_macos_example.sh  run_windows_example.bat  windows.cmake
.github/workflows/: ci.yml
cmake/: campello_input-config.cmake.in
docs/: Doxyfile.in  README.md
docs/pages/: mainpage.md  usage_guide.md
examples/: README.md
examples/android/app/: build.gradle.kts
examples/android/app/src/androidTest/java/systems/leal/campello_input/: ExampleInstrumentedTest.kt
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/cpp/: CMakeLists.txt  Font.h  InputDisplayState.h  InputRenderer.cpp  InputRenderer.h  campello_input.cmake  main.cpp
examples/android/app/src/main/java/systems/leal/campello_input/: MainActivity.kt
examples/android/app/src/test/java/systems/leal/campello_input/: ExampleUnitTest.kt
examples/android/gradle/: libs.versions.toml
examples/android/gradle/wrapper/: gradle-wrapper.properties
examples/glfw_integration/: CMakeLists.txt  main.cpp
examples/ios/: CMakeLists.txt  Info.plist.in  README.md
examples/ios/src/: AppDelegate.h  AppDelegate.m  InputView.h  InputView.mm  InputViewController.h  InputViewController.mm  main.m
examples/macos/: CMakeLists.txt  Info.plist.in  README.md  campello_input.cmake
examples/macos/src/: AppDelegate.h  AppDelegate.mm  InputView.h  InputView.mm  InputViewController.h  InputViewController.mm  main.mm
examples/minimal/: CMakeLists.txt  main.cpp
examples/windows/: CMakeLists.txt  README.md
examples/windows/src/: main.cpp
inc/campello_input/: controller_data.hpp  device.hpp  gamepad.hpp  haptics.hpp  input_system.hpp  keyboard.hpp  manager.hpp  mouse.hpp  touch.hpp
src/: campello_input_config.h.in  input_system.cpp
src/android/: haptics_android.cpp  input_android.cpp  input_android_system.cpp  keyboard_android.cpp  manager.cpp  mouse_android.cpp  touch_android.cpp
src/android/inc/campello_input/: haptics_android.hpp  input_android.hpp  input_android_system.hpp  keyboard_android.hpp  manager_android_struct.hpp  mouse_android.hpp  touch_android.hpp
src/apple/: gamepad_apple.mm  haptics_apple.mm  input_apple.mm  input_apple_system.mm  keyboard_apple.mm  mouse_apple.mm  touch_apple.mm
src/apple/inc/campello_input/: gamepad_apple.hpp  haptics_apple.hpp  input_apple.hpp  input_apple_system.hpp  keyboard_apple.hpp  mouse_apple.hpp  touch_apple.hpp
src/gdk/: device.cpp  gamepad_gdk.cpp  haptics_gdk.cpp  input_gdk_system.cpp  keyboard_gdk.cpp  mouse_gdk.cpp
src/gdk/inc/campello_input/: gamepad_gdk.hpp  haptics_gdk.hpp  input_gdk_system.hpp  keyboard_gdk.hpp  mouse_gdk.hpp
src/linux/: gamepad_linux.cpp  input_linux_system.cpp  keyboard_linux.cpp  mouse_linux.cpp
src/linux/inc/campello_input/: gamepad_linux.hpp  input_linux_system.hpp  keyboard_linux.hpp  mouse_linux.hpp
src/playstation/: device.cpp
tests/: CMakeLists.txt
tests/mocks/: mock_gamepad.hpp  mock_input_system.hpp  mock_keyboard.hpp  mock_mouse.hpp
tests/unit/: test_enums.cpp  test_main.cpp  test_mock_devices.cpp  test_observer.cpp  test_state_structs.cpp
